# ai-based-apk-generator

./: README.md
ai-service/: .env.example  README.md  diagnostic_check.py  fix_timestamps.ps1  pyproject.toml  test_complete_flow.py  test_connections.py  test_send_message.py
ai-service/ai_service/: __init__.py
ai-service/app/: config.py  main.py
ai-service/app/api/v1/: __init__.py  generate.py  health.py  health_advanced.py  results.py  stats.py  test_routes.py
ai-service/app/core/: async_anthropic_client.py  cache.py  database.py  logger.py  messaging.py  task_manager.py
ai-service/app/llm/: base.py  heuristic_provider.py  llama3_provider.py  orchestrator.py  prompt_manager.py
ai-service/app/models/: enhanced_schemas.py  prompts.py  schemas.py
ai-service/app/services/: pipeline.py
ai-service/app/services/analysis/: context_builder.py  intent_analyzer.py  intent_config.py  intent_orchestrator.py  intent_schemas.py  tier_base.py  tier_claude.py  tier_groq.py  tier_heuristic.py
ai-service/app/services/generation/: __init__.py  architecture_generator.py  architecture_validator.py  blockly_generator.py  blockly_validator.py  heuristic_generator.py  layout_generator.py  layout_validator.py  response_formatter.py
ai-service/app/utils/: datetime_utils.py  logging.py  rate_limiter.py
ai-service/scripts/: init_db.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_quick_flow.py  test_quick_phase3.py  test_quick_phase4.py  test_quick_phase5.py
ai-service/tests/: load_test_suite.py  simple_test.py  test_heuristic_provider.py  test_llama3_provider.py  test_llm_orchestrator.py  test_prompt_manager.py
ai-service/tests/test_reports/: summary_20260115_233043.txt  summary_20260116_004209.txt  system_test_20260115_233043.json  system_test_20260116_004209.json
infra/: docker-compose.yml
