[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "AI-powered mobile app generation service"
authors = ["Abelti Beshana obsidian.being.tech@gmail.com"]
readme = "README.md"
packages= [{include = "ai_service"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
anthropic = "^0.40.0"
aio-pika = "^9.4.3"
redis = "^5.2.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
loguru = "^0.7.2"
tenacity = "^9.0.0"
prometheus-client = "^0.21.0"
python-multipart = "^0.0.20"
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
httpx = "^0.28.0"
faker = "^33.0.0"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"