[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "AI-powered mobile app generation service"
authors = ["Abelti Beshana <obsidian.being.tech@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_service"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Web Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}

# AI & ML
anthropic = "^0.40.0"

# Messaging & Caching
aio-pika = "^9.4.3"
redis = {extras = ["hiredis"], version = "^5.2.0"}
pika = "^1.3.2"

# Database
asyncpg = "^0.29.0"

# Data Validation & Settings
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"

# Utilities
loguru = "^0.7.2"
tenacity = "^9.0.0"
python-multipart = "^0.0.20"

# Monitoring
prometheus-client = "^0.21.0"
rapidfuzz = "^3.14.3"
httpx = "^0.28.1"
python-json-logger = "^4.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.12.0"
httpx = "^0.28.0"
faker = "^33.0.0"

# Code Quality
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
pre-commit = "^3.6.0"

# Development Tools
ipython = "^8.20.0"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"